--- a/client/notepal/src/pages/AllNotes.css
+++ b/client/notepal/src/pages/AllNotes.css
@@ -14,14 +14,14 @@
     grid-template-columns: repeat(3,1fr);
     justify-content: flex-start;
     align-items: flex-start;
-    margin-top: 2rem;
+    margin: 2rem;
     gap: 3%;
 
 }
 
 .note_item{
-    min-width: 100%;
-    min-height:13rem;
+    width: 100%;
+    height: 16rem;
     background-color: rebeccapurple;
     display: flex;
     flex-direction: column;
@@ -30,6 +30,30 @@
     cursor: pointer;
     
 }
+
+.span-item{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+h3{
+    margin: 0;
+    padding: 0;
+}
+
+.note-pic{
+    width: 70%;
+  }
+
+  .note-pic img{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+  }
 
 .afterEffects{
     position: absolute;
@@ -48,7 +72,7 @@
 }
 
 .note_item_title{
-    margin-top: 2.5rem;
+
 }
 
 .note_item_desc{
