--- a/client/notepal/src/Components/Navbar.css
+++ b/client/notepal/src/Components/Navbar.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgba(203, 47, 217, 0.089);
+    background-color: #00539C;
     
 }
 
