--- a/client/notepal/src/UI/notebox/Notebox.css
+++ b/client/notepal/src/UI/notebox/Notebox.css
@@ -13,6 +13,7 @@
     display: grid;
     grid-template-columns: repeat(4,1fr);
     gap: 1%;
+    overflow-y: scroll;
 }
 
 .note_item{
@@ -63,7 +64,7 @@
   }
 /* Basic button styles */
 .pagination-button {
-    background-color: #007bff;
+    background-color: #00539C;
     color: #fff;
     border: none;
     padding: 10px 20px;
