--- a/client/notepal/src/pages/Home.css
+++ b/client/notepal/src/pages/Home.css
@@ -114,7 +114,7 @@
 
 .view_notes{
     min-width: 100%;
-    background-color: yellow;
+    background-color: #3498DB;
     padding: 1rem 0;
     display: flex;
     align-items: center;
@@ -232,3 +232,4 @@ button {
 .Open{
     display: block;
 }
+
